# data-engineering-zoomcamp

./: .gitignore
cohorts/2026/01-docker-terraform/: Dockerfile  README.md  homework.md  notes  pyproject.toml
cohorts/2026/01-docker-terraform/ingestion/: compose.yaml  ingest_green_tripdata.ipynb  ingest_green_tripdata.py  ingest_taxi_zone_lookup.py  run.sh
cohorts/2026/02-workflow-orchestration/: docker-compose.yaml
cohorts/2026/03-data-warehouse/: DLT_upload_to_GCP.ipynb  Dockerfile  Load DF to GCP.ipynb  docker-compose.yaml  homework.md  load_yellow_taxi_data.py  pyproject.toml
