[project]
name = "01-docker-terraform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "fastparquet>=2025.12.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "pgcli>=4.4.0",
    "fsspec>=2026.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    
]
