[project]
name = "03-data-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2025.12.0",
    "google>=3.0.0",
    "google-cloud-storage>=3.9.0",
    "pandas>=3.0.0",
    "pandas-gbq>=0.31.0",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
]
